src/objects/sma__MASettingsAssignments__c.object
<CustomObject>
    <fields>
        <fullName>sma__MASettingsGroup__c</fullName>
        <label>MapAnything Settings Group</label>
        <referenceTo>sma__MASettingsGroup__c</referenceTo>
        <relationshipLabel>MapAnything Settings Assignments</relationshipLabel>
        <relationshipName>MASettingsAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__Profile__c</fullName>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MASettingsAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Settings Assignment</label>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>MA Settings Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Settings Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>